Added UX/UI page and assets

--- a/ux-ui.html
+++ b/ux-ui.html
@@ -197,7 +197,7 @@
                   <a href="http://www.kasiatrilling.com/print">Print</a>
                 </li>
 
-                <li class="gallery-collection">
+                <li class="gallery-collection active-link">
                   <a href="./ux-ui">UX/UI</a>
                 </li>
 
@@ -214,7 +214,7 @@
             </nav>
             <nav class="main-nav mobile-nav">
               <ul>
-                <li class="page-collection active-link">
+                <li class="page-collection">
                   <a href="./about.html">About</a>
                 </li>
               </ul>
@@ -255,7 +255,7 @@
               >
                 <ul>
                   <li class="gallery-collection">
-                    <a href="index.html">Home</a>
+                    <a href="./index.html">Home</a>
                   </li>
 
                   <li class="gallery-collection">
@@ -270,7 +270,7 @@
                     <a href="http://www.kasiatrilling.com/print">Print</a>
                   </li>
 
-                  <li class="gallery-collection">
+                  <li class="gallery-collection active-link">
                     <a href="./ux-ui">UX/UI</a>
                   </li>
 
@@ -291,7 +291,7 @@
                 class="main-nav dropdown-click desktop-nav"
               >
                 <ul>
-                  <li class="page-collection active-link">
+                  <li class="page-collection">
                     <a href="./about.html">ABOUT</a>
                   </li>
                 </ul>
@@ -317,29 +317,349 @@
           </header>
         </div>
 
-        <div
-          id="pageWrapper"
-          class="hfeed"
-          role="main"
-          style="margin-top: 134px"
-        >
-          <p>
-            I am a Senior Designer / Art Director / IXD based in London, with
-            over 15 years experience working in a variety of media with a wide
-            range of clients; from fashion & retail to financial institutions,
-            integrated agencies to advertising.
-          </p>
-          <p>
-            The selection of my work shown here includes art direction,
-            branding, advertising, UX/UI, cross platform & cross media design,
-            app design, marketing, presentation and pitch work.
-          </p>
-          <p>
-            <a href="mailto:kasiatrilling@gmail.com">Get in touch</a> or view my
-            <a href="http://www.linkedin.com/pub/kasia-trilling/17/9a3/120"
-              >LinkedIn profile</a
-            >.
-          </p>
+        <div id="pageWrapper" class="hfeed" role="main">
+          <!-- CATEGORY NAV -->
+
+          <section id="page" style="min-height: 295px">
+            <div
+              class="main-content"
+              data-content-field="main-content"
+              id="yui_3_17_2_1_1616086600641_686"
+            >
+              <div id="galleryWrapper">
+                <div id="slideshowWrapper" class="" style="height: 784px">
+                  <div
+                    id="slideshow"
+                    class="slideshow sqs-gallery-design-stacked"
+                  >
+                    <!-- Main page single photo START -->
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/UX-UI/Barclays_website.gif"
+                        data-image="./src/assets/UX-UI/Barclays_website.gif"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        src="./src/assets/UX-UI/Barclays_website.gif"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: auto;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <!-- Main page single photo END -->
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/UX-UI/Sandisk_mss_unit.jpg"
+                        data-image="./src/assets/UX-UI/Sandisk_mss_unit.jpg"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        src="./src/assets/UX-UI/Sandisk_mss_unit.jpg"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: auto;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/UX-UI/Spreadshirt_checkout.gif"
+                        data-image="./src/assets/UX-UI/Spreadshirt_checkout.gif"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        src="./src/assets/UX-UI/Spreadshirt_checkout.gif"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: auto;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                    <div
+                      class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
+                      data-slide-id="601887d25fbc185342a5f0b8"
+                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      id="yui_3_17_2_1_1616086600641_132"
+                      data-type="image"
+                      style="opacity: 1; z-index: 889"
+                    >
+                      <img
+                        class="load-false loaded"
+                        data-src="./src/assets/UX-UI/Spreadshirt_nav.gif"
+                        data-image="./src/assets/UX-UI/Spreadshirt_nav.gif"
+                        data-image-focal-point="0.5,0.5"
+                        data-load="false"
+                        data-image-id="601887d25fbc185342a5f0b8"
+                        data-type="image"
+                        data-parent-ratio="1.8"
+                        src="./src/assets/UX-UI/Spreadshirt_nav.gif"
+                        style="
+                          font-size: 0px;
+                          left: 118.47px;
+                          top: 0px;
+                          width: 1175.06px;
+                          height: auto;
+                          position: relative;
+                        "
+                      />
+                    </div>
+                  </div>
+                  <div class="overlay-controls left-control"></div>
+                  <div
+                    class="overlay-controls center-control thumbnail-toggle"
+                  ></div>
+                  <div class="overlay-controls right-control"></div>
+                </div>
+
+                <div class="meta" style="opacity: 1">
+                  <div id="imageData">
+                    <div
+                      class="slide sqs-active-slide"
+                      id="yui_3_17_2_1_1616086600641_741"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_743"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_745"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_747"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_749"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_751"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_753"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_755"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_757"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_759"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_761"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_763"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_765"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_767"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_769"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_771"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_773"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_775"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_777"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+
+                    <div
+                      class="slide"
+                      id="yui_3_17_2_1_1616086600641_779"
+                      data-type="image"
+                    >
+                      <div class="slide-meta-wrapper"></div>
+                    </div>
+                  </div>
+
+                  <div id="simpleControls" class="gallery-controls">
+                    <span class="control prev-slide">prev</span> /
+                    <span class="control next-slide">next</span>
+                  </div>
+
+                  <div id="numberControls" class="gallery-controls">
+                    <span class="number sqs-active-slide">1 </span
+                    ><span class="number">2 </span><span class="number">3 </span
+                    ><span class="number">4 </span><span class="number">5 </span
+                    ><span class="number">6 </span><span class="number">7 </span
+                    ><span class="number">8 </span><span class="number">9 </span
+                    ><span class="number">10 </span
+                    ><span class="number">11 </span
+                    ><span class="number">12 </span
+                    ><span class="number">13 </span
+                    ><span class="number">14 </span
+                    ><span class="number">15 </span
+                    ><span class="number">16 </span
+                    ><span class="number">17 </span
+                    ><span class="number">18 </span
+                    ><span class="number">19 </span
+                    ><span class="number">20 </span>
+                  </div>
+
+                  <div id="dotControls" class="gallery-controls">
+                    <span class="dot sqs-active-slide">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span><span class="dot">·</span
+                    ><span class="dot">·</span>
+                  </div>
+
+                  <div class="thumbnail-toggle">show thumbnails</div>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </div>
