--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="http://www.kasiatrilling.com/ux-ui">UX/UI</a>
+                  <a href="./ux-ui">UX/UI</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -271,7 +271,7 @@
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="http://www.kasiatrilling.com/ux-ui">UX/UI</a>
+                    <a href="./ux-ui">UX/UI</a>
                   </li>
 
                   <li class="gallery-collection">
