update linkedin link

--- a/about.html
+++ b/about.html
@@ -328,7 +328,7 @@
           </p>
           <p>
             <a href="mailto:kasiatrilling@gmail.com">Get in touch</a> or view my
-            <a href="http://www.linkedin.com/pub/kasia-trilling/17/9a3/120"
+            <a href="https://www.linkedin.com/in/kasiatrilling175/"
               >LinkedIn profile</a
             >.
           </p>
