--- a/ux-ui.html
+++ b/ux-ui.html
@@ -172,7 +172,71 @@
     <link rel="stylesheet" type="text/css" href="./src/site.css" />
   </head>
   <body
-    class="sidebar-text-alignment-left sidebar-position-left sidebar-fixed mobile-site-title-style-auto blog-sidebar-right gallery-style-fit initial-gallery-view-slideshow homepage-gallery-view-slideshow thumbnail-aspect-ratio-auto gallery-controls-simple social-icon-style-normal show-category-navigation event-show-past-events event-thumbnails event-thumbnail-size-32-standard event-date-label event-list-show-cats event-list-date event-list-time event-list-address event-icalgcal-links event-excerpts event-item-back-link product-list-titles-under product-list-alignment-center product-item-size-23-standard-vertical product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing tweak-v1-related-products-image-aspect-ratio-11-square tweak-v1-related-products-details-alignment-center newsletter-style-dark hide-opentable-icons opentable-style-dark small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-solid button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-type-gallery collection-layout-default collection-54870f8de4b09086546ab9ed homepage view-list mobile-style-available"
+    class="
+      sidebar-text-alignment-left sidebar-position-left sidebar-fixed
+      mobile-site-title-style-auto
+      blog-sidebar-right
+      gallery-style-fit
+      initial-gallery-view-slideshow
+      homepage-gallery-view-slideshow
+      thumbnail-aspect-ratio-auto
+      gallery-controls-simple
+      social-icon-style-normal
+      show-category-navigation
+      event-show-past-events
+      event-thumbnails
+      event-thumbnail-size-32-standard
+      event-date-label
+      event-list-show-cats
+      event-list-date
+      event-list-time
+      event-list-address
+      event-icalgcal-links
+      event-excerpts
+      event-item-back-link
+      product-list-titles-under
+      product-list-alignment-center
+      product-item-size-23-standard-vertical
+      product-image-auto-crop
+      product-gallery-size-11-square
+      product-gallery-auto-crop
+      show-product-price show-product-item-nav
+      product-social-sharing
+      tweak-v1-related-products-image-aspect-ratio-11-square
+      tweak-v1-related-products-details-alignment-center
+      newsletter-style-dark
+      hide-opentable-icons
+      opentable-style-dark
+      small-button-style-solid small-button-shape-square
+      medium-button-style-solid medium-button-shape-square
+      large-button-style-solid large-button-shape-square
+      image-block-poster-text-alignment-center
+      image-block-card-dynamic-font-sizing
+      image-block-card-content-position-center
+      image-block-card-text-alignment-left
+      image-block-overlap-dynamic-font-sizing
+      image-block-overlap-content-position-center
+      image-block-overlap-text-alignment-left
+      image-block-collage-dynamic-font-sizing
+      image-block-collage-content-position-top
+      image-block-collage-text-alignment-left
+      image-block-stack-dynamic-font-sizing
+      image-block-stack-text-alignment-left
+      button-style-solid button-corner-style-square
+      tweak-product-quick-view-button-style-floating
+      tweak-product-quick-view-button-position-bottom
+      tweak-product-quick-view-lightbox-excerpt-display-truncate
+      tweak-product-quick-view-lightbox-show-arrows
+      tweak-product-quick-view-lightbox-show-close-button
+      tweak-product-quick-view-lightbox-controls-weight-light
+      native-currency-code-usd
+      collection-type-gallery
+      collection-layout-default
+      collection-54870f8de4b09086546ab9ed
+      homepage
+      view-list
+      mobile-style-available
+    "
     id="collection-54870f8de4b09086546ab9ed"
   >
     <div id="canvasWrapper">
@@ -556,14 +620,22 @@
       Squarespace.afterBodyLoad(Y);
     </script>
     <script>
-      const FILENAMES = []; // TODO Add fillename and assets
       const FOLDER = "ux-ui";
+      const PREFIX = "UX";
+      const NUM_OF_PICS = 22;
+      const INDEX_WITH_GIF = [2, 3, 18, 19, 22];
+
       const container = document.getElementById("slideshow");
 
-      FILENAMES.forEach((filename) => {
+      for (let i = 1; i <= NUM_OF_PICS; i++) {
+        let etenstion = "jpg";
+        if (INDEX_WITH_GIF.includes(i)) {
+          etenstion = "gif";
+        }
+        const filename = `${PREFIX} ${i}.${etenstion}`;
         const imageEl = htmlToElement(getImageHTML(filename, FOLDER));
         container.appendChild(imageEl);
-      });
+      }
 
       function htmlToElement(html) {
         var template = document.createElement("template");
