Change "prev" "next" controls to be chevrons

--- a/art-direction.html
+++ b/art-direction.html
@@ -559,8 +559,8 @@
                   </div>
 
                   <div id="simpleControls" class="gallery-controls">
-                    <span class="control prev-slide">prev</span> /
-                    <span class="control next-slide">next</span>
+                    <span class="control prev-slide">&lt;</span> /
+                    <span class="control next-slide">&gt;</span>
                   </div>
 
                   <div id="numberControls" class="gallery-controls">
