[BUGFIX] changing slide doesn't change the URL

--- a/art-direction.html
+++ b/art-direction.html
@@ -647,8 +647,7 @@
       function getImageHTML(filename, folder) {
         return `<div
                       class="slide sqs-gallery-design-stacked-slide loaded sqs-active-slide"
-                      data-slide-id="601887d25fbc185342a5f0b8"
-                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
+                      data-slide-url="${FOLDER}.html"
                       id="yui_3_17_2_1_1616086600641_132"
                       data-type="image"
                       style="opacity: 1; z-index: 889"
@@ -659,7 +658,6 @@
                         data-image="./src/assets/${folder}/${filename}"
                         data-image-focal-point="0.5,0.5"
                         data-load="false"
-                        data-image-id="601887d25fbc185342a5f0b8"
                         data-type="image"
                         data-parent-ratio="1.8"
                         src="./src/assets/${folder}/${filename}"
