Remove `.html` from index and art-direction links

--- a/about.html
+++ b/about.html
@@ -182,11 +182,11 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection">
-                  <a href="./index.html">Home</a>
+                  <a href="./index">Home</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./art-direction.html">Art direction</a>
+                  <a href="./art-direction">Art direction</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -251,11 +251,11 @@
               >
                 <ul>
                   <li class="gallery-collection">
-                    <a href="index.html">Home</a>
+                    <a href="index">Home</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./art-direction.html">Art direction</a>
+                    <a href="./art-direction">Art direction</a>
                   </li>
 
                   <li class="gallery-collection">
