--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection active-link">
-                  <a href="./index.html">Home</a>
+                  <a href="./index">Home</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./art-direction.html">Art direction</a>
+                  <a href="./art-direction">Art direction</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -315,11 +315,11 @@
               >
                 <ul>
                   <li class="gallery-collection active-link">
-                    <a href="./index.html">Home</a>
+                    <a href="./index">Home</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./art-direction.html">Art direction</a>
+                    <a href="./art-direction">Art direction</a>
                   </li>
 
                   <li class="gallery-collection">
