--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="http://www.kasiatrilling.com/illustration"
+                  <a href="./illustration"
                     >Illustration</a
                   >
                 </li>
@@ -267,7 +267,7 @@
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="http://www.kasiatrilling.com/illustration"
+                    <a href="./illustration"
                       >Illustration</a
                     >
                   </li>
