--- a/design.html
+++ b/design.html
@@ -262,9 +262,7 @@
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="http://www.kasiatrilling.com/illustration"
-                    >Illustration</a
-                  >
+                  <a href="./illustration">Illustration</a>
                 </li>
 
                 <li class="page-collection">
@@ -331,9 +329,7 @@
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="http://www.kasiatrilling.com/illustration"
-                      >Illustration</a
-                    >
+                    <a href="./illustration">Illustration</a>
                   </li>
 
                   <li class="page-collection">
