--- a/index.html
+++ b/index.html
@@ -246,23 +246,23 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection active-link">
-                  <a href="./index">Home</a>
+                  <a href="./index.html">Home</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./art-direction">Art direction</a>
+                  <a href="./art-direction.html">Art direction</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./design">Design</a>
+                  <a href="./design.html">Design</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./ux-ui">UX/UI</a>
+                  <a href="./ux-ui.html">UX/UI</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./illustration">Illustration</a>
+                  <a href="./illustration.html">Illustration</a>
                 </li>
 
                 <li class="page-collection">
@@ -313,23 +313,23 @@
               >
                 <ul>
                   <li class="gallery-collection active-link">
-                    <a href="./index">Home</a>
+                    <a href="./index.html">Home</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./art-direction">Art direction</a>
+                    <a href="./art-direction.html">Art direction</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./design">Design</a>
+                    <a href="./design.html">Design</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./ux-ui">UX/UI</a>
+                    <a href="./ux-ui.html">UX/UI</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./illustration">Illustration</a>
+                    <a href="./illustration.html">Illustration</a>
                   </li>
 
                   <li class="page-collection">
