Remove link from left sidebar separator

--- a/about.html
+++ b/about.html
@@ -265,9 +265,7 @@
                   <a href="./illustration.html">Illustration</a>
                 </li>
 
-                <li class="page-collection">
-                  <a href="http://www.kasiatrilling.com/page-">—</a>
-                </li>
+                <li class="page-collection">—</li>
               </ul>
             </nav>
             <nav class="main-nav mobile-nav">
@@ -332,9 +330,7 @@
                     <a href="./illustration.html">Illustration</a>
                   </li>
 
-                  <li class="page-collection">
-                    <a href="http://www.kasiatrilling.com/page-">—</a>
-                  </li>
+                  <li class="page-collection">—</li>
                 </ul>
               </nav>
 
