Update about copy

--- a/about.html
+++ b/about.html
@@ -316,7 +316,7 @@
           style="margin-top: 134px"
         >
           <p>
-            Hello. I am an Art Director and Interaction Designer currently based in London. 
+            Hello. I am an Art Director and Interaction Designer currently based in London. <br />
             I have over 15 years experience working in a variety of media with a wide
             range of clients; from fashion & retail brands to financial institutions,
             large integrated agencies to small start-ups.
