--- a/about.html
+++ b/about.html
@@ -172,7 +172,71 @@
     <link rel="stylesheet" type="text/css" href="./src/site.css" />
   </head>
   <body
-    class="sidebar-text-alignment-left sidebar-position-left sidebar-fixed mobile-site-title-style-auto blog-sidebar-right gallery-style-fit initial-gallery-view-slideshow homepage-gallery-view-slideshow thumbnail-aspect-ratio-auto gallery-controls-simple social-icon-style-normal show-category-navigation event-show-past-events event-thumbnails event-thumbnail-size-32-standard event-date-label event-list-show-cats event-list-date event-list-time event-list-address event-icalgcal-links event-excerpts event-item-back-link product-list-titles-under product-list-alignment-center product-item-size-23-standard-vertical product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing tweak-v1-related-products-image-aspect-ratio-11-square tweak-v1-related-products-details-alignment-center newsletter-style-dark hide-opentable-icons opentable-style-dark small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-solid button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-type-gallery collection-layout-default collection-54870f8de4b09086546ab9ed homepage view-list mobile-style-available"
+    class="
+      sidebar-text-alignment-left sidebar-position-left sidebar-fixed
+      mobile-site-title-style-auto
+      blog-sidebar-right
+      gallery-style-fit
+      initial-gallery-view-slideshow
+      homepage-gallery-view-slideshow
+      thumbnail-aspect-ratio-auto
+      gallery-controls-simple
+      social-icon-style-normal
+      show-category-navigation
+      event-show-past-events
+      event-thumbnails
+      event-thumbnail-size-32-standard
+      event-date-label
+      event-list-show-cats
+      event-list-date
+      event-list-time
+      event-list-address
+      event-icalgcal-links
+      event-excerpts
+      event-item-back-link
+      product-list-titles-under
+      product-list-alignment-center
+      product-item-size-23-standard-vertical
+      product-image-auto-crop
+      product-gallery-size-11-square
+      product-gallery-auto-crop
+      show-product-price show-product-item-nav
+      product-social-sharing
+      tweak-v1-related-products-image-aspect-ratio-11-square
+      tweak-v1-related-products-details-alignment-center
+      newsletter-style-dark
+      hide-opentable-icons
+      opentable-style-dark
+      small-button-style-solid small-button-shape-square
+      medium-button-style-solid medium-button-shape-square
+      large-button-style-solid large-button-shape-square
+      image-block-poster-text-alignment-center
+      image-block-card-dynamic-font-sizing
+      image-block-card-content-position-center
+      image-block-card-text-alignment-left
+      image-block-overlap-dynamic-font-sizing
+      image-block-overlap-content-position-center
+      image-block-overlap-text-alignment-left
+      image-block-collage-dynamic-font-sizing
+      image-block-collage-content-position-top
+      image-block-collage-text-alignment-left
+      image-block-stack-dynamic-font-sizing
+      image-block-stack-text-alignment-left
+      button-style-solid button-corner-style-square
+      tweak-product-quick-view-button-style-floating
+      tweak-product-quick-view-button-position-bottom
+      tweak-product-quick-view-lightbox-excerpt-display-truncate
+      tweak-product-quick-view-lightbox-show-arrows
+      tweak-product-quick-view-lightbox-show-close-button
+      tweak-product-quick-view-lightbox-controls-weight-light
+      native-currency-code-usd
+      collection-type-gallery
+      collection-layout-default
+      collection-54870f8de4b09086546ab9ed
+      homepage
+      view-list
+      mobile-style-available
+    "
     id="collection-54870f8de4b09086546ab9ed"
   >
     <div id="canvasWrapper">
@@ -182,30 +246,26 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection">
-                  <a href="./index">Home</a>
+                  <a href="./index.html">Home</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./art-direction">Art direction</a>
+                  <a href="./art-direction.html">Art direction</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./design">Design</a>
+                  <a href="./design.html">Design</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./ux-ui">UX/UI</a>
+                  <a href="./ux-ui.html">UX/UI</a>
                 </li>
 
                 <li class="gallery-collection">
-                  <a href="./illustration"
-                    >Illustration</a
-                  >
+                  <a href="./illustration.html">Illustration</a>
                 </li>
 
-                <li class="page-collection">
-                  <a href="http://www.kasiatrilling.com/page-">—</a>
-                </li>
+                <li class="page-collection">—</li>
               </ul>
             </nav>
             <nav class="main-nav mobile-nav">
@@ -251,30 +311,26 @@
               >
                 <ul>
                   <li class="gallery-collection">
-                    <a href="index">Home</a>
+                    <a href="./index.html">Home</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./art-direction">Art direction</a>
+                    <a href="./art-direction.html">Art direction</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./design">Design</a>
+                    <a href="./design.html">Design</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./ux-ui">UX/UI</a>
+                    <a href="./ux-ui.html">UX/UI</a>
                   </li>
 
                   <li class="gallery-collection">
-                    <a href="./illustration"
-                      >Illustration</a
-                    >
+                    <a href="./illustration.html">Illustration</a>
                   </li>
 
-                  <li class="page-collection">
-                    <a href="http://www.kasiatrilling.com/page-">—</a>
-                  </li>
+                  <li class="page-collection">—</li>
                 </ul>
               </nav>
 
@@ -316,18 +372,22 @@
           style="margin-top: 134px"
         >
           <p>
-            Hello. I am an Art Director and Interaction Designer currently based in London. <br />
-            I have over 15 years experience working in a variety of media with a wide
-            range of clients; from fashion & retail brands to financial institutions,
-            large integrated agencies to small start-ups.
+            Hello. I am an Art Director and Interaction Designer currently based
+            in London. <br />
+            I have over 15 years experience working in a variety of media with a
+            wide range of clients; from fashion & retail brands to financial
+            institutions, large integrated agencies to small start-ups.
           </p>
           <p>
-            My extensive freelance experience (13 years) has given me the opportunity to work across many disciplines, 
-            incuding: art direction, brand strategy & visual identity, concept development, UX, UI, advertising, 
-            cross platform & app design, marketing, presentation design and pitch work. 
+            My extensive freelance experience (13 years) has given me the
+            opportunity to work across many disciplines, incuding: art
+            direction, brand strategy & visual identity, concept development,
+            UX, UI, advertising, cross platform & app design, marketing,
+            presentation design and pitch work.
           </p>
           <p>
-            Please <a href="mailto:kasiatrilling@gmail.com">get in touch</a> or view my
+            Please <a href="mailto:kasiatrilling@gmail.com">get in touch</a> or
+            view my
             <a href="https://www.linkedin.com/in/kasiatrilling175/"
               >LinkedIn profile</a
             >.
