Make about description width fixed

--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@
           id="pageWrapper"
           class="hfeed"
           role="main"
-          style="margin-top: 134px"
+          style="margin-top: 134px; width: 600px"
         >
           <p>
             Hello. I am an Art Director and Interaction Designer currently based
