Make links in about page bold

--- a/about.html
+++ b/about.html
@@ -382,10 +382,13 @@
             presentation design and pitch work.
           </p>
           <p>
-            Please <a href="mailto:kasiatrilling@gmail.com">get in touch</a> or
+            Please
+            <b><a href="mailto:kasiatrilling@gmail.com">get in touch</a></b> or
             view my
-            <a href="https://www.linkedin.com/in/kasiatrilling175/"
-              >LinkedIn profile</a
+            <b
+              ><a href="https://www.linkedin.com/in/kasiatrilling175/"
+                >LinkedIn profile</a
+              ></b
             >.
           </p>
         </div>
