Removed "Home" page, replaced it with "About" page (new landing page)

--- a/illustration.html
+++ b/illustration.html
@@ -246,7 +246,7 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection">
-                  <a href="./index.html">Home</a>
+                  <a href="./index.html">About</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -263,13 +263,6 @@
 
                 <li class="gallery-collection active-link">
                   <a href="./illustration.html">Illustration</a>
-                </li>
-              </ul>
-            </nav>
-            <nav class="main-nav mobile-nav">
-              <ul>
-                <li class="page-collection">
-                  <a href="./about.html">About</a>
                 </li>
               </ul>
             </nav>
@@ -309,7 +302,7 @@
               >
                 <ul>
                   <li class="gallery-collection">
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html">About</a>
                   </li>
 
                   <li class="gallery-collection">
@@ -326,17 +319,6 @@
 
                   <li class="gallery-collection active-link">
                     <a href="./illustration.html">Illustration</a>
-                  </li>
-                </ul>
-              </nav>
-
-              <nav
-                id="secondaryNavigation"
-                class="main-nav dropdown-click desktop-nav"
-              >
-                <ul>
-                  <li class="page-collection">
-                    <a href="./about.html">ABOUT</a>
                   </li>
                 </ul>
               </nav>
