--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <nav class="main-nav mobile-nav">
               <ul>
                 <li class="gallery-collection active-link">
-                  <a href="./index.html">Home</a>
+                  <a href="./index.html">About</a>
                 </li>
 
                 <li class="gallery-collection">
@@ -268,7 +268,7 @@
             </nav>
             <nav class="main-nav mobile-nav">
               <ul>
-                <li class="page-collection">
+                <li class="page-collection active-link">
                   <a href="./about.html">About</a>
                 </li>
               </ul>
@@ -309,7 +309,7 @@
               >
                 <ul>
                   <li class="gallery-collection active-link">
-                    <a href="./index.html">Home</a>
+                    <a href="./index.html">About</a>
                   </li>
 
                   <li class="gallery-collection">
@@ -326,17 +326,6 @@
 
                   <li class="gallery-collection">
                     <a href="./illustration.html">Illustration</a>
-                  </li>
-                </ul>
-              </nav>
-
-              <nav
-                id="secondaryNavigation"
-                class="main-nav dropdown-click desktop-nav"
-              >
-                <ul>
-                  <li class="page-collection">
-                    <a href="./about.html">ABOUT</a>
                   </li>
                 </ul>
               </nav>
@@ -361,270 +350,36 @@
           </header>
         </div>
 
-        <div id="pageWrapper" class="hfeed" role="main">
-          <!-- CATEGORY NAV -->
-
-          <section id="page" style="min-height: 295px">
-            <div
-              class="main-content"
-              data-content-field="main-content"
-              id="yui_3_17_2_1_1616086600641_686"
-            >
-              <div id="galleryWrapper">
-                <div id="slideshowWrapper" class="" style="height: 784px">
-                  <div
-                    id="slideshow"
-                    class="slideshow sqs-gallery-design-stacked"
-                  >
-                    <!-- Main page single photo START -->
-                    <div
-                      class="
-                        slide
-                        sqs-gallery-design-stacked-slide
-                        loaded
-                        sqs-active-slide
-                      "
-                      data-slide-id="601887d25fbc185342a5f0b8"
-                      data-slide-url="ah62mw05u2g43j86xqcvj2v3uztkrt"
-                      id="yui_3_17_2_1_1616086600641_132"
-                      data-type="image"
-                      style="opacity: 1; z-index: 889"
-                    >
-                      <img
-                        class="load-false loaded"
-                        data-src="./src/assets/1.jpeg"
-                        data-image="./src/assets/1.jpeg"
-                        data-image-focal-point="0.5,0.5"
-                        data-load="false"
-                        data-image-id="601887d25fbc185342a5f0b8"
-                        data-type="image"
-                        data-parent-ratio="1.8"
-                        src="./src/assets/1.jpeg"
-                        style="
-                          font-size: 0px;
-                          left: 118.47px;
-                          top: 0px;
-                          width: 1175.06px;
-                          height: auto;
-                          position: relative;
-                        "
-                      />
-                    </div>
-                    <!-- Main page single photo END -->
-                  </div>
-                  <div class="overlay-controls left-control"></div>
-                  <div
-                    class="overlay-controls center-control thumbnail-toggle"
-                  ></div>
-                  <div class="overlay-controls right-control"></div>
-                </div>
-
-                <div class="meta" style="opacity: 1">
-                  <div id="imageData">
-                    <div
-                      class="slide sqs-active-slide"
-                      id="yui_3_17_2_1_1616086600641_741"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_743"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_745"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_747"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_749"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_751"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_753"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_755"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_757"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_759"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_761"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_763"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_765"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_767"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_769"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_771"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_773"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_775"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_777"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-
-                    <div
-                      class="slide"
-                      id="yui_3_17_2_1_1616086600641_779"
-                      data-type="image"
-                    >
-                      <div class="slide-meta-wrapper"></div>
-                    </div>
-                  </div>
-
-                  <div id="simpleControls" class="gallery-controls">
-                    <span class="control prev-slide">&lt;</span> /
-                    <span class="control next-slide">&gt;</span>
-                  </div>
-
-                  <div id="numberControls" class="gallery-controls">
-                    <span class="number sqs-active-slide">1 </span
-                    ><span class="number">2 </span><span class="number">3 </span
-                    ><span class="number">4 </span><span class="number">5 </span
-                    ><span class="number">6 </span><span class="number">7 </span
-                    ><span class="number">8 </span><span class="number">9 </span
-                    ><span class="number">10 </span
-                    ><span class="number">11 </span
-                    ><span class="number">12 </span
-                    ><span class="number">13 </span
-                    ><span class="number">14 </span
-                    ><span class="number">15 </span
-                    ><span class="number">16 </span
-                    ><span class="number">17 </span
-                    ><span class="number">18 </span
-                    ><span class="number">19 </span
-                    ><span class="number">20 </span>
-                  </div>
-
-                  <div id="dotControls" class="gallery-controls">
-                    <span class="dot sqs-active-slide">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span><span class="dot">·</span
-                    ><span class="dot">·</span>
-                  </div>
-
-                  <div class="thumbnail-toggle">show thumbnails</div>
-                </div>
-              </div>
-            </div>
-          </section>
+        <div
+          id="pageWrapper"
+          class="hfeed"
+          role="main"
+          style="margin-top: 134px; max-width: 600px"
+        >
+          <p>
+            Hello. I am an Art Director and Interaction Designer currently based
+            in London. <br />
+            I have over 15 years experience working in a variety of media with a
+            wide range of clients; from fashion & retail brands to financial
+            institutions, large integrated agencies to small start-ups.
+          </p>
+          <p>
+            My extensive freelance experience (13 years) has given me the
+            opportunity to work across many disciplines, incuding: art
+            direction, brand strategy & visual identity, concept development,
+            UX, UI, advertising, cross platform & app design, marketing,
+            presentation design and pitch work.
+          </p>
+          <p>
+            Please
+            <b><a href="mailto:kasiatrilling@gmail.com">get in touch</a></b> or
+            view my
+            <b
+              ><a href="https://www.linkedin.com/in/kasiatrilling175/"
+                >LinkedIn profile</a
+              ></b
+            >.
+          </p>
         </div>
       </div>
     </div>
