Added logos of companies worked with to landing page

--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
               ></b
             >.
           </p>
+          <p style="margin-top: 50px">
+            Companies and brands I have worked with include:
+          </p>
+          <img src="./src/worked-with-logos.png" style="margin-top: 20px" />
         </div>
       </div>
     </div>
