Remove extra About link in mobile view

--- a/index.html
+++ b/index.html
@@ -266,13 +266,6 @@
                 </li>
               </ul>
             </nav>
-            <nav class="main-nav mobile-nav">
-              <ul>
-                <li class="page-collection active-link">
-                  <a href="./about.html">About</a>
-                </li>
-              </ul>
-            </nav>
           </div>
         </div>
 
@@ -354,7 +347,7 @@
           id="pageWrapper"
           class="hfeed"
           role="main"
-          style="margin-top: 134px; max-width: 600px"
+          style="margin-top: 134px; max-width: 600px; overflow-y: scroll"
         >
           <p>
             Hello. I am an Art Director and Interaction Designer currently based
