Make landing page scrollable

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           id="pageWrapper"
           class="hfeed"
           role="main"
-          style="margin-top: 134px; max-width: 600px; overflow-y: scroll"
+          style="margin-top: 134px; max-width: 600px"
         >
           <p>
             Hello. I am an Art Director and Interaction Designer currently based
