Make landing page images scale with browser window

--- a/index.html
+++ b/index.html
@@ -376,7 +376,10 @@
           <p style="margin-top: 50px">
             Companies and brands I have worked with include:
           </p>
-          <img src="./src/worked-with-logos.png" style="margin-top: 20px" />
+          <img
+            src="./src/worked-with-logos.png"
+            style="margin-top: 20px; width: 100%"
+          />
         </div>
       </div>
     </div>
