Move logos inside assets folder

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             Companies and brands I have worked with include:
           </p>
           <img
-            src="./src/worked-with-logos.png"
+            src="./src/assets/worked-with-logos.png"
             style="margin-top: 20px; width: 100%"
           />
         </div>
