Make landing page scrollable

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     "
     id="collection-54870f8de4b09086546ab9ed"
   >
-    <div id="canvasWrapper">
+    <div id="canvasWrapper" style="overflow-y: auto">
       <div id="canvas">
         <div id="mobileNav">
           <div class="wrapper">
